# codegen

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  buildJsonRender.py  build_mac_debug.sh  build_winDebug.bat
cmake/: _add_compile_definitions.cmake  _add_include_directories.cmake  _add_link_libraries.cmake  _build_target.cmake  _check_os.cmake  _copy_directory.cmake  _create_alias.cmake  _create_ide_filter.cmake  _create_target.cmake  _gen_source_file_list.cmake  _install_target.cmake  _set_code_position_independent.cmake  _set_cxx_standard.cmake  _set_ignore_warning_list.cmake  _set_signing_after_build.cmake
examples/: README.md
scripts/: build_mac_debug.sh  build_winDebug.bat
src/: AccessSpecifier.h  AdapterHeader.tpl  CMakeLists.txt  ClassInfo.h  ClassInfoJsonDump.h  ClassParser.h  EnumParser.h  FileGenerator.cpp  FileGenerator.h  HeaderParser.h  Jinja2Render.cpp  JsonRender.cpp  MethodParser.h  NormalCpp.tpl  NormalHeader.tpl  ServiceHeader.tpl  Utils.h  main.cpp
src/generator/: FileGenerator.cpp  FileGenerator.h
src/generator/jinja_tpl/: AdapterCpp.tpl  ClassDepsJsonInfo.tpl  ClassJsonInfo.tpl  ServiceCpp.tpl  ServiceHeader.tpl
wrap_script/: builtin_type_rule.json  code_gen_helper.py  jinja2_helper.py
wrap_script/dart_convert/: data.json
wrap_script/dart_convert/config/: dart_class_info_reference.json  dart_convert_custom_rule.json
wrap_script/dart_convert/config/jinja2_tpl/: interface.tpl
